<resources>
    <string name="business_prompt">Choose a Bussiness Type</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">not_registered</string>
    <string name="register">register</string>
    <string name="conform_password">confirm_password</string>
    <string name="Register">Register</string>
    <string name="already_registered">already_register</string>
    <string name="Login">Login</string>
    <string name="add_new_expense">add_new_Expense</string>
    <string name="amount">amount</string>
    <string name="add_expense">add_expense</string>
    <string name="rupee_sym">rs</string>
    <string name="current_week_expenses">current_week_Expense</string>
    <string name="current_months_expenses">current_mont_Expenses</string>
    <string name="todays_expenses">todays_expense</string>
    <string name="add_category">add_category</string>
    <string name="category">Category</string>
    <string name="add_new_category">Add new Category</string>
    <string name="add_category_success">Category added Successfully</string>
    <string name="category_empty_error">Empty Category</string>
    <string name="total_expense">Total Expense</string>
    <string name="amount_empty_error">Amount is Empty</string>
    <string name="expense_add_successfully">Expense Added Successfully</string>
    <string name="action_add_category">Add new Category</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_income">Add Income</string>

    <string-array name="date_array">
        <item>All</item>
        <item>This Week</item>
        <item>This Month</item>

    </string-array>
    <array name="drawer_items">
        <item>Home</item>
        <item>This Week</item>
        <item>This Month</item>
    </array>
</resources>
