<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/corner"
        app:srcCompat="@drawable/ic_launcher"/>


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/corner"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/corner"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/edittext_cmf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/corner"
        android:hint="@string/conform_password"
        />
    <CheckBox
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:text="Show Password"
        android:id="@+id/showpassword"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner"
        android:text="@string/Register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="Already have an Account?? Login!!"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>